# interpolatable

./: Cargo.toml
.github/workflows/: deploy.yml
interpolatable-cli/: Cargo.toml
interpolatable-cli/src/: cairopen.rs  main.rs  plot.rs
interpolatable-lib/: Cargo.toml  TestData.glyphs
interpolatable-lib/src/: basiccompat.rs  bezglyph.rs  contourorder.rs  isomorphism.rs  kink.rs  lib.rs  problems.rs  startingpoint.rs  utils.rs  weight.rs
interpolatable-python/: Cargo.toml  pyproject.toml
interpolatable-python/src/: lib.rs
interpolatable-web/: Cargo.toml
interpolatable-web/src/: lib.rs
interpolatable-web/www/: index.html  index.js  package.json  style.css  webworker.js
