[workspace]
resolver = "2"

members = [
    "interpolatable-lib",
    "interpolatable-cli",
    "interpolatable-python",
    "interpolatable-web",
]

default-members = ["interpolatable-lib", "interpolatable-cli"]

[workspace.dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
fontations = "0.3.0"
kurbo = "0.11"
