[package]
name = "interpolatable"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dev-dependencies]
serde_json = "1.0"

[dependencies]
greencurves = "0.2.0"
kurbo = { workspace = true }
skrifa = { workspace = true, optional = true }
munkres = "0.5"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"
