[package]
name = "interpolatable"
version = "1.1.1"
edition = "2021"
description = "Library for testing font interpolatability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simoncozens/interpolatable"

[lib]
path = "src/lib.rs"

[dev-dependencies]
serde_json = "1.0"

[dependencies]
greencurves = "0.2.0"
kurbo = { workspace = true }
fontations = { workspace = true, optional = true }
munkres = "0.5"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"
